--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
-/* main, first section */
-.blue{
+[class*="col"] {
     background-color: blue;
+    border: 1px white solid;
+    height: 100px;
 }
